fixed weird spacing on nav

--- a/app/assets/stylesheets/1140.css
+++ b/app/assets/stylesheets/1140.css
@@ -90,7 +90,7 @@ img {
 
 /* Smaller screens */
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
+@media and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
 
 	body {
 	font-size: 0.8em;
@@ -100,6 +100,7 @@ img {
 	nav li a {
 		padding-top:15px;
 	}
+
 }
 
 
